k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alap-backend
  namespace: cloudproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alap-backend
  template:
    metadata:
      labels:
        app: alap-backend
    spec:
      containers:
        - name: app
          image: whyxn/alap-backend:build-0001
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
