k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alap-backend
  namespace: cloudproject
spec:
  selector:
    app: alap-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
